--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="matrix">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="main-page">
+    <p id="new_tasks">
       <label for="new-task">Add Item</label>
     </p>
     <div class="task-row-wrapper">
@@ -19,7 +19,7 @@
       <button>Add</button>
     </div>
     <h3>Todo</h3>
-    <ul id="in-complete-Tasks">  
+    <ul id="in-complete-tasks">  
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
