--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="matrix">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main-page">
     <p id="new_tasks">
@@ -19,7 +19,7 @@
       <button>Add</button>
     </div>
     <h3>Todo</h3>
-    <ul id="in-complete-tasks">  
+    <ul id="tasks">  
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
