--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="main">
   <div class="matrix">
     <img src="./eisenhower-matrix.jpg">
     <a class="inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -41,7 +41,7 @@
     </ul>
     <h3>Completed</h3>
     <ul id="completed-tasks">
-      <li>
+      <li >
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
