--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main class="main">
     <acticle class="eisenhower_matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </acticle>
     <article class="todo-list">
@@ -32,7 +32,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
           <li class="edit-mode">
@@ -41,7 +41,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
         </ul>
@@ -55,7 +55,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
         </ul>
