--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 
 <body>
   <main class="main">
-    <acticle class="eisenhower_matrix">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-      <a class="inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <acticle class="eisenhower-matrix">
+      <img class="eisenhower-matrix__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+      <a class="eisenhower-matrix__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </acticle>
     <article class="todo-list">
-      <section class="new_tasks">
+      <section class="todo-list__new-tasks">
         <p id="new_tasks">
           <label for="new-task">Add Item</label>
         </p>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+        <div class="todo-list__task-row">
+          <input id="new-task" class="todo-list__task" type="text">
+          <button class="button todo-list__button_add">Add</button>
         </div>
       </section>
-      <section class="todo">
+      <section class="todo-list__todo">
         <h3>Todo</h3>
         <ul id="tasks">
           <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
               <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
@@ -39,8 +39,8 @@
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
+            <button class="button edit">Save</button>
+            <button class="button delete">
               <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
@@ -53,8 +53,8 @@
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
               <img src="./remove.svg" alt="Arrow with a cross in the center to remove content">
             </button>
           </li>
